--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>Angular Utilities</module>
+    </modules>
     <properties>
         <activiti.version>5.19.0.1</activiti.version>
         <selenium.version>2.53.0</selenium.version>
@@ -21,5 +24,18 @@
         <allure.maven.plugin.version>2.5</allure.maven.plugin.version>
     </properties>
 
+<dependencies>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>${selenium.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-remote-driver</artifactId>
+        <version>${selenium.version}</version>
+        <scope>compile</scope>
+    </dependency>
 
+</dependencies>
 </project>
