--- a/Appium/pom.xml
+++ b/Appium/pom.xml
@@ -8,18 +8,16 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>saucelab</artifactId>
+    <artifactId>Appium</artifactId>
     <packaging>jar</packaging>
-    <build>
-        <resources>
-            <resource>
-                <directory>src/test/resources</directory>
-                <!-- <includes>
-                     <include>**.*</include>
-                 </includes>-->
-            </resource>
-        </resources>
-    </build>
-
+<build>
+    <resources>
+        <resource>
+            <directory>src/test/resources</directory>
+            <!-- <includes>
+                 <include>**.*</include>
+             </includes>-->
+        </resource>
+    </resources>
+</build>
 </project>
