--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>Angular Utilities</module>
         <module>Saucelab</module>
         <module>Appium</module>
+        <module>BrowserStack</module>
     </modules>
     <properties>
         <activiti.version>5.19.0.1</activiti.version>
