--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>Browser</module>
         <module>JavaScriptUtis</module>
         <module>PageValidations</module>
+        <module>SeleniumCommon</module>
     </modules>
     <properties>
         <activiti.version>5.19.0.1</activiti.version>
