--- a/JavaScriptUtis/pom.xml
+++ b/JavaScriptUtis/pom.xml
@@ -10,6 +10,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>javascript</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>selenium-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>selenium-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>browser</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
