refactored needed for remote capabilities

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
         <module>Saucelab</module>
         <module>Appium</module>
         <module>BrowserStack</module>
-        <module>Browser</module>
         <module>JavaScriptUtis</module>
         <module>PageValidations</module>
         <module>Common</module>
@@ -24,7 +23,7 @@
     </modules>
     <properties>
         <activiti.version>5.19.0.1</activiti.version>
-        <selenium.version>2.53.0</selenium.version>
+        <selenium.version>3.0.1</selenium.version>
         <appium.version>3.4.1</appium.version>
         <saucelab.version>2.1.21</saucelab.version>
         <surefire.version>2.19.1</surefire.version>
@@ -75,6 +74,11 @@
         </plugins>
     </build>
 <dependencies>
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.16.8</version>
+    </dependency>
     <dependency>
         <groupId>net.lightbody.bmp</groupId>
         <artifactId>browsermob-proxy</artifactId>
