--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -13,7 +13,12 @@
     <dependencies>
         <dependency>
             <groupId>org.automation</groupId>
-            <artifactId>browser</artifactId>
+            <artifactId>browserstack</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>saucelab</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
