--- a/RemoteBrowser/pom.xml
+++ b/RemoteBrowser/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>browser</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>selenium-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
