--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>saucelab</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>Appium</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
