--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,14 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/test/resources</directory>
+                <!-- <includes>
+                     <include>**.*</include>
+                 </includes>-->
+            </resource>
+        </resources>
     </build>
     <dependencies>
         <dependency>
