Page scan added

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>PageUtilities</module>
         <module>BrowserUtilities</module>
         <module>RemoteBrowser</module>
+        <module>PageScan</module>
     </modules>
     <properties>
         <activiti.version>5.19.0.1</activiti.version>
