--- a/JavaScriptUtis/pom.xml
+++ b/JavaScriptUtis/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>javascript</artifactId>
+    <artifactId>javascript-utils</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.automation</groupId>
