--- a/JavaScriptUtis/pom.xml
+++ b/JavaScriptUtis/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>org.automation</groupId>
-            <artifactId>browser</artifactId>
+            <artifactId>browser-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
