crypto in common

--- a/PageScan/pom.xml
+++ b/PageScan/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>pagescanner</artifactId>
 
+<dependencies>
+    <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.10.2</version>
+    </dependency>
 
+</dependencies>
 </project>
