--- a/BrowserUtilities/pom.xml
+++ b/BrowserUtilities/pom.xml
@@ -10,4 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>browser-utils</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
