--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -9,24 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>selenium-common</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>org.automation</groupId>
-            <artifactId>browserstack</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.automation</groupId>
-            <artifactId>saucelab</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.automation</groupId>
-            <artifactId>Appium</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-
+    <artifactId>common</artifactId>
 
 </project>
