--- a/PageValidations/pom.xml
+++ b/PageValidations/pom.xml
@@ -10,8 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>validations</artifactId>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>page-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
