--- a/PageUtilities/pom.xml
+++ b/PageUtilities/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>browser-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>javascript-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
