selenium http client added

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>BrowserUtilities</module>
         <module>RemoteBrowser</module>
         <module>PageScan</module>
+        <module>HttpClient</module>
     </modules>
     <properties>
         <activiti.version>5.19.0.1</activiti.version>
