--- a/Appium/pom.xml
+++ b/Appium/pom.xml
@@ -20,4 +20,11 @@
         </resource>
     </resources>
 </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium.version}</version>
+        </dependency>
+    </dependencies>
 </project>
