--- a/HttpClient/pom.xml
+++ b/HttpClient/pom.xml
@@ -17,5 +17,11 @@
             <artifactId>selenium-java</artifactId>
             <version>${selenium.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.automation</groupId>
+            <artifactId>page-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
