--- a/RemoteBrowser/pom.xml
+++ b/RemoteBrowser/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
+            <version>${selenium.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
