--- a/TestExamples/pom.xml
+++ b/TestExamples/pom.xml
@@ -30,6 +30,15 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+<build>
+    <resources>
+        <resource>
+            <directory>src/test/resources</directory>
+            <!-- <includes>
+                 <include>**.*</include>
+             </includes>-->
+        </resource>
+    </resources>
+</build>
 
 </project>
