--- a/JavaScriptUtis/pom.xml
+++ b/JavaScriptUtis/pom.xml
@@ -23,6 +23,15 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- <includes>
+                     <include>**.*</include>
+                 </includes>-->
+            </resource>
+        </resources>
+    </build>
 
 </project>
