--- a/Saucelab/pom.xml
+++ b/Saucelab/pom.xml
@@ -43,4 +43,14 @@
             <version>${saucelab.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- <includes>
+                     <include>**.*</include>
+                 </includes>-->
+            </resource>
+        </resources>
+    </build>
 </project>
