--- a/Appium/pom.xml
+++ b/Appium/pom.xml
@@ -13,7 +13,7 @@
 <build>
     <resources>
         <resource>
-            <directory>src/test/resources</directory>
+            <directory>src/main/resources</directory>
             <!-- <includes>
                  <include>**.*</include>
              </includes>-->
