--- a/BrowserUtilities/pom.xml
+++ b/BrowserUtilities/pom.xml
@@ -37,4 +37,14 @@
             <version>1.2.0</version>
         </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- <includes>
+                     <include>**.*</include>
+                 </includes>-->
+            </resource>
+        </resources>
+    </build>
 </project>
