--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -10,5 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common</artifactId>
-
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- <includes>
+                     <include>**.*</include>
+                 </includes>-->
+            </resource>
+        </resources>
+    </build>
 </project>
