--- a/PageValidations/pom.xml
+++ b/PageValidations/pom.xml
@@ -18,5 +18,14 @@
         </dependency>
     </dependencies>
 
-
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- <includes>
+                     <include>**.*</include>
+                 </includes>-->
+            </resource>
+        </resources>
+    </build>
 </project>
