--- a/BrowserStack/pom.xml
+++ b/BrowserStack/pom.xml
@@ -32,6 +32,11 @@
         <artifactId>java-client</artifactId>
         <version>${appium.version}</version>
     </dependency>
+    <dependency>
+        <groupId>org.automation</groupId>
+        <artifactId>common</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
 </dependencies>
 
 </project>
