--- a/properties/browserstack/browserstack-local.properties
+++ b/properties/browserstack/browserstack-local.properties
@@ -1,5 +1,6 @@
-user.name=shantonu
-user.api=hwwuefkabjsfksdasdasd
+user=shantonu
+key=""
+browserstack.server=""
 
 # source https://www.browserstack.com/accounts/subscriptions
 lisense.type=Automate
