capability refactored to file base properties

--- a/properties/browserstack/browserstack.properties
+++ b/properties/browserstack/browserstack.properties
@@ -1,6 +1,7 @@
 browserstack.user=shantonu
 browserstack.key=""
 browserstack.server=""
+browserstack.capability.node=N13216815
 
 # source https://www.browserstack.com/accounts/subscriptions
 lisense.type=Automate
