--- a/properties/user.properties
+++ b/properties/user.properties
@@ -1,3 +1,4 @@
 #This is a spacial file where we can define property files
 #This is mechine dependent, so for windows & linux, you need to maintain path
 applium.property.file=./property/appium/appium.properties
+webdriver.properties=c://selenium/config.properties
