--- a/BrowserUtilities/pom.xml
+++ b/BrowserUtilities/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.automation</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>selenium-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
