--- a/BrowserStack/pom.xml
+++ b/BrowserStack/pom.xml
@@ -34,7 +34,12 @@
     </dependency>
     <dependency>
         <groupId>org.automation</groupId>
-        <artifactId>common</artifactId>
+        <artifactId>selenium-common</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+        <groupId>org.automation</groupId>
+        <artifactId>selenium-common</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
 </dependencies>
