--- a/RemoteBrowser/pom.xml
+++ b/RemoteBrowser/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>org.automation</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>selenium-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
