--- a/TestExamples/pom.xml
+++ b/TestExamples/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>selenium-utilities</artifactId>
-        <groupId>org.automation</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+
+
+    <groupId>org.automation</groupId>
+    <version>1.0-SNAPSHOT</version>
+    <artifactId>test-examples</artifactId>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>test-examples</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -30,15 +30,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-<build>
-    <resources>
-        <resource>
-            <directory>src/test/resources</directory>
-            <!-- <includes>
-                 <include>**.*</include>
-             </includes>-->
-        </resource>
-    </resources>
-</build>
+
 
 </project>
