--- a/HttpClient/pom.xml
+++ b/HttpClient/pom.xml
@@ -11,17 +11,16 @@
 
     <artifactId>http-client</artifactId>
 
+    <properties>
+        <selenium.version>3.4.0</selenium.version>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>${selenium.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.automation</groupId>
-            <artifactId>page-utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
