--- a/Saucelab/pom.xml
+++ b/Saucelab/pom.xml
@@ -2,15 +2,18 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>selenium-utilities</artifactId>
-        <groupId>org.automation</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.automation</groupId>
     <artifactId>saucelab</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
+
+    <properties>
+        <saucelab.version>2.1.21</saucelab.version>
+        <selenium.version>3.4.0</selenium.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -33,14 +36,5 @@
             <version>${saucelab.version}</version>
         </dependency>
     </dependencies>
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <!-- <includes>
-                     <include>**.*</include>
-                 </includes>-->
-            </resource>
-        </resources>
-    </build>
+
 </project>
