--- a/Appium/pom.xml
+++ b/Appium/pom.xml
@@ -10,16 +10,22 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>Appium</artifactId>
     <packaging>jar</packaging>
-<build>
-    <resources>
-        <resource>
-            <directory>src/main/resources</directory>
-            <!-- <includes>
-                 <include>**.*</include>
-             </includes>-->
-        </resource>
-    </resources>
-</build>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <compilerVersion>1.8</compilerVersion>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
