--- a/BrowserUtilities/pom.xml
+++ b/BrowserUtilities/pom.xml
@@ -37,14 +37,20 @@
             <version>1.2.0</version>
         </dependency>
     </dependencies>
+
+
     <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <!-- <includes>
-                     <include>**.*</include>
-                 </includes>-->
-            </resource>
-        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <compilerVersion>1.8</compilerVersion>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
