--- a/PageUtilities/pom.xml
+++ b/PageUtilities/pom.xml
@@ -2,13 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>selenium-utilities</artifactId>
-        <groupId>org.automation</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+
+    <groupId>org.automation</groupId>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>page-utils</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>org.automation</groupId>
@@ -31,5 +29,18 @@
             <version>1.5.2</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <compilerVersion>1.8</compilerVersion>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
