--- a/BrowserUtilities/pom.xml
+++ b/BrowserUtilities/pom.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>selenium-utilities</artifactId>
-        <groupId>org.automation</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.automation</groupId>
     <artifactId>browser-utils</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <properties>
+        <activiti.version>5.19.0.1</activiti.version>
+        <selenium.version>3.4.0</selenium.version>
+        <appium.version>3.4.1</appium.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.automation</groupId>
