--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <module>HttpClient</module>
         <module>TestExamples</module>
     </modules>
-    <properties>
+   <!-- <properties>
         <activiti.version>5.19.0.1</activiti.version>
         <selenium.version>3.4.0</selenium.version>
         <appium.version>3.4.1</appium.version>
@@ -33,7 +33,7 @@
         <allure.version>1.5.0.RC2</allure.version>
         <aspectj.version>1.8.8</aspectj.version>
     </properties>
-
+-->
 
 
 </project>
