--- a/RemoteBrowser/pom.xml
+++ b/RemoteBrowser/pom.xml
@@ -2,14 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    <parent>
+        <groupId>org.automation</groupId>
+        <artifactId>selenium-utilities</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.automation</groupId>
+
     <artifactId>remote-browser</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <properties>
-        <selenium.version>3.4.0</selenium.version>
-    </properties>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
