--- a/Appium/pom.xml
+++ b/Appium/pom.xml
@@ -4,30 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.automation</groupId>
+        <artifactId>selenium-utilities</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <groupId>org.automation</groupId>
     <artifactId>Appium</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <properties>
-        <activiti.version>5.19.0.1</activiti.version>
-        <selenium.version>3.4.0</selenium.version>
-        <appium.version>3.4.1</appium.version>
-    </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <compilerVersion>1.8</compilerVersion>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
     <dependencies>
         <dependency>
             <groupId>io.appium</groupId>
