--- a/Saucelab/pom.xml
+++ b/Saucelab/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>org.automation</groupId>
+        <artifactId>selenium-utilities</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.automation</groupId>
     <artifactId>saucelab</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
-    <properties>
-        <saucelab.version>2.1.21</saucelab.version>
-        <selenium.version>3.4.0</selenium.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -28,7 +27,7 @@
         <dependency>
             <groupId>com.saucelabs</groupId>
             <artifactId>saucerest</artifactId>
-            <version>1.0.32</version>
+            <version>${saucerest.version}</version>
         </dependency>
         <dependency>
             <groupId>com.saucelabs</groupId>
