--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <module>HttpClient</module>
         <module>TestExamples</module>
     </modules>
-   <!-- <properties>
+    <properties>
         <activiti.version>5.19.0.1</activiti.version>
         <selenium.version>3.4.0</selenium.version>
         <appium.version>3.4.1</appium.version>
@@ -32,8 +32,40 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <allure.version>1.5.0.RC2</allure.version>
         <aspectj.version>1.8.8</aspectj.version>
+        <lombok.version>1.16.8</lombok.version>
+        <saucerest.version>1.0.32</saucerest.version>
+        <lombok.plugin.version>1.16.8.0</lombok.plugin.version>
     </properties>
--->
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <compilerVersion>1.8</compilerVersion>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-maven-plugin</artifactId>
+                <version>${lombok.plugin.version}</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>testDelombok</goal>
+                            <goal>delombok</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
