finally project restructured

--- a/PageUtilities/pom.xml
+++ b/PageUtilities/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>ru.yandex.qatools.ashot</groupId>
             <artifactId>ashot</artifactId>
-            <version>1.5.2</version>
+            <version>${ashot.version}</version>
         </dependency>
     </dependencies>
 
